# cpuminer-gr

./: .gitignore  Makefile.am  README.md  algo-gate-api.c  algo-gate-api.h  build-allarch.sh  build.sh  configure  cpu-miner.c  miner.h  simd-utils.h  sse2neon.h  sysinfos.c  util.c  winbuild-cross.sh
algo/gr/: gr-gate.c  gr-gate.h
algo/gr/cryptonote/: cryptonight_dark.c  cryptonight_dark_lite.c  cryptonight_fast.c  cryptonight_lite.c  cryptonight_turtle.c  cryptonight_turtle_lite.c
algo/keccak/: keccak-gate.c
algo/lyra2/: lyra2.c  sponge.c
algo/sha/: sha256-hash-opt.c  sha3-defs.h
simd-utils/: intrlv.h  simd-int.h
